--- a/src/main/resources/assets/supermoney/lang/ja_jp.lang
+++ b/src/main/resources/assets/supermoney/lang/ja_jp.lang
@@ -22,4 +22,5 @@ tile.super_money_power_block.name=強大な財力のブロック
 tile.power_comverter.name=財力変換器
 itemGroup.tabsuper_money=Super Money
 item.money_armorlegs.name=Money Leggings
+item.big_moneyaxe.name=Big Moneyaxe
 item.wallet.name=お財布
